--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Estudio Fotográfico Fotocol2000</title>
 	</head>
 	<body>
-		<h1>Title</h1>
-		<h2>Subtitle</h2>
-		<p>Hola</p>
+		<h1>Title cambiado</h1>
+		<h2>Subtitle ampliado</h2>
+		<p>Adios</p>
 	</body>
 </html>
