--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Estudio Fotográfico Fotocol2000</title>
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>Title cambiado en master</h1>
 		<h2>Subtitle</h2>
 		<p>Hola</p>
 	</body>
